sound: Don't crash if pa_stream_peek returns NULL

pa_stream_peek can return NULL, even though it's unusual. In the upcoming
version of PulseAudio this has been clarified in the documentation.

In that case, don't crash, just call pa_stream_drop so that the
pointer moves forward.

https://bugzilla.gnome.org/show_bug.cgi?id=689079